// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`throws exception for unclear properties 1`] = `"You have to use 'id' or 'passThrough' property in translations."`;

exports[`works with \`passThrough\` property 1`] = `
<Text>
  passThrough test
</Text>
`;

exports[`works with almost any type of \`passThrough\` property - testing: "string" 1`] = `
<Text>
  string
</Text>
`;

exports[`works with almost any type of \`passThrough\` property - testing: 123 1`] = `
<Text>
  123
</Text>
`;

exports[`works with almost any type of \`passThrough\` property - testing: null 1`] = `<Text />`;

exports[`works with translation ID property 1`] = `
<FormattedMessage
  id="ID test"
  values={Object {}}
>
  [Function]
</FormattedMessage>
`;
